--- a/pagina_de_receita/assets/css/style.css
+++ b/pagina_de_receita/assets/css/style.css
@@ -40,7 +40,7 @@ main {
     background-color: hsl(0, 0%, 100%);
     border-radius: 15px;
     box-shadow: 2px 4px 10px rgba(0, 0, 0, 0.1);
-    margin: 0 auto;
+    margin: 0 auto 16px;
     max-width: 800px;
     padding: 20px;
 }
@@ -111,4 +111,26 @@ main #nutrition .tipo-nutriente {
 main #nutrition table .unidade-medida {
     color: var(--color2);
     font-weight: bold;
+}
+
+footer {
+    max-width: 800px;
+    background-color: #fff;
+    box-shadow: 2px 4px 10px rgba(0, 0, 0, 0.475);
+    margin: 0 auto;
+    border-radius: 15px;
+    padding: 10px;
+    text-align: center;
+    font-family: var(--font1);
+    font-size: 0.65em;
+}
+
+footer a {
+    color: rgb(109, 109, 109);
+    text-decoration: none;
+}
+
+footer a:hover {
+    color: var(--color2);
+    text-decoration: underline;
 }
