--- a/perfil-de-links-sociais/assets/css/style.css
+++ b/perfil-de-links-sociais/assets/css/style.css
@@ -40,7 +40,7 @@ main {
 }
 
 header {
-    margin-bottom: 30px;
+    margin-bottom: 20px;
 }
 
 header img {
@@ -80,15 +80,11 @@ div li {
     box-shadow: 0 0 3px #BF9A2C;
     border-radius: 10px;
     max-width: 400px;
-    padding: 15px;
+    padding: 10px;
     list-style: none;
     margin: 15px auto;
 
     transition: linear 0.3s;
-}
-
-div li:last-child {
-    margin-bottom: 30px;
 }
 
 div li:hover {
@@ -127,7 +123,7 @@ footer {
     max-width: 430px;
     min-width: 300px;
     padding: 15px;
-    margin: 0 auto;
+    margin: 0 auto 30px;
 
     color: #fff;
     text-align: center;
