--- a/blog-preview-card/assets/css/style.css
+++ b/blog-preview-card/assets/css/style.css
@@ -96,6 +96,8 @@ article p {
     position: relative;
     top: -22px;
     left: 10px;
+    padding: 0;
+    margin: 0;
 
     font-weight: bold;
     font-size: 1.2em;
