--- a/profile-card/assets/css/style.css
+++ b/profile-card/assets/css/style.css
@@ -14,8 +14,9 @@ body {
     background-repeat: no-repeat, no-repeat;
 }
 
-#main {
+main, footer{
     background-color: #ffffff;
+    box-shadow: 1px 1px 7px black;
     width: 90%;
     max-width: 500px;
     border-radius: 15px;
@@ -23,7 +24,7 @@ body {
     margin: 5% auto;
 }
 
-#main #img-capa {
+main .img-capa {
     background-image: url('../images/bg-pattern-card.svg');
     height: 150px;
     border-top-right-radius: 15px;
@@ -31,39 +32,60 @@ body {
     margin: -10px -10px -50px;
 }
 
-#main #img-perfil > img {
+main .img-perfil > img {
     display: block;
     border-radius: 50%;
     border: 6px solid #fff;
     margin: auto;
+    transition: linear .3s;
 }
 
-#main > #information {
+main .img-perfil > img:hover {
+    transform: scale(1.3);
+}
+
+main > .information {
     text-align: center;
 }
 
-#main > #information > #city {
+main > .information > .city {
     color: var(--dark-gray);
 }
 
-#main > #stats-container {
+main > .stats-container {
     text-align: center;
     margin: auto;
 }
 
-#main > #stats-container > .container {
+main > .stats-container > .container {
     display: inline-block;
     text-align: center;
     margin: 0 25px;
 }
 
-#main > #stats-container .num {
+main > .stats-container .num {
     font-size: 1.5em;
     font-weight: bold;
     margin-bottom: -5px;
 }
 
-#main > #stats-container .label {
+main > .stats-container .label {
     color: var(--dark-gray);
     letter-spacing: 3px;
+}
+
+footer {
+    text-align: center;
+    border-radius: .75em;
+    padding: 10px;
+}
+
+footer a {
+    color: var(--dark-gray);
+    text-decoration: none;
+}
+
+footer a:hover {
+    color: var(--dark-g-blue);
+    text-decoration: underline;
 }
