--- a/perfil-de-links-sociais/assets/css/style.css
+++ b/perfil-de-links-sociais/assets/css/style.css
@@ -29,10 +29,10 @@ main {
     background-color: var(--grey2);
     box-shadow: 1px 1px 10px #BF9A2C;
     border-radius: 15px;
-    width: 90%;
+    width: 85%;
     max-width: 430px;
     min-width: 300px;
-    margin: 40px auto 30px;
+    margin: 5% auto 30px;
     padding: 5px 20px;
     color: #fff;
     font-family: var(--font1);
@@ -76,18 +76,13 @@ main #cargo {
     margin-bottom: 25px;
 }
 div li {
-    background-color: var(--grey1);
-    box-shadow: 0 0 3px #BF9A2C;
-    border-radius: 10px;
     max-width: 400px;
-    padding: 10px;
     list-style: none;
     margin: 15px auto;
-
-    transition: linear 0.3s;
+    
 }
 
-div li:hover {
+div li a:hover {
     transform: scale(1.05);
     transition: .3s;
     background-color: var(--green);
@@ -100,9 +95,16 @@ div li.inativo{
 }
 
 div li a {
-    text-decoration: none;
+    display: inline-block;
+    background-color: var(--grey1);
+    border-radius: 10px;
+    box-shadow: 0 0 3px #BF9A2C;
+    width: 90%;
+    padding: 15px;
+
     color: #fff;
     font-weight: 600;
+    text-decoration: none;
     letter-spacing: 2px;
 }
 
@@ -123,7 +125,8 @@ footer {
     max-width: 430px;
     min-width: 300px;
     padding: 15px;
-    margin: 0 auto 30px;
+    margin: 0 auto 3%;
+    transition: linear 0.3s; 
 
     color: #fff;
     text-align: center;
